---------------------------------------------------------------------------------------------------
Version: 1.4.4
Date: ????
  Bugfixes:
    - Fixed crash when importing a preset.
    - Fixed rare crash when another mod changes a player's force the moment the game is created.

---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2024-12-16
  Bugfixes:
    - Fixed a data stage crash caused by a breaking change in flib.

  Locale:
    - Translation updates for German, French, Spanish, and Catalan.

---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2024-11-12
  Changes:
    - When reaching a milestone with a quality condition, the message will now indicate the quality (e.g. "Created the first Rare Power Armor")

  Locale:
    - Added Brazilian Portuguese translation thanks to Lucas (Oliveira).

---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2024-10-14
  Bugfixes:
    - Fixed new surfaces not being considered for milestone checks.
    - Fixed crash when removing a mod that added quality levels.

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2024-09-21
  Changes:
    - Updated for Factorio 2.0.
    - Added a Space Age preset. (May change in the future)
    - Added support for quality. You can select a quality when adding an item as a milestone in the settings GUI. Selecting "normal" will be considered as an "any quality" milestone.

  Locale:
    - Added Catalan translation thanks to badall.
    - Translation updates for French and Dutch.

---------------------------------------------------------------------------------------------------
Version: 1.3.25
Date: 2024-03-03
  Bugfixes: